# LettuceMeet_CLI

./: .gitignore  README.md  main.py  package.json  pyproject.toml
.agents/: context.md  init.md
.agents/skills/lettucemeet-cli/: SKILL.md
.memory/: decisions.md  progress.md
docs/: ARCHITECTURE.md  MCP.md  SKILL.md  TOKEN_BOOKMARKLET.md
docs/plans/: 2026-07-14-lettucemeet-cli.md
scripts/: install-skill.sh
src/lettucemeet_cli/: __init__.py  __main__.py  api.py  cli.py  client.py  config.py  mcp_server.py  models.py  overlap.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_models.py  test_overlap.py
tests/fixtures/: event_j5r5a.json
