[project]
name = "LettuceMeet_CLI"
version = "0.1.0"
description = "Terminal CLI for LettuceMeet - create polls, view responses, find meeting overlaps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.scripts]
lettucemeet = "lettucemeet_cli.cli:main"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "requests-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
